objects/Customer_s_Order__c.object
<CustomObject>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <label>Delivery Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery</fullName>
                    <default>true</default>
                    <label>Delivery</label>
                </value>
                <value>
                    <fullName>Pickup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Ammount__c</fullName>
        <label>Total Ammount</label>
        <summarizedField>Order_Detail__c.Copy_Total_Price__c</summarizedField>
        <summaryForeignKey>Order_Detail__c.Customer_s_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>Order_Detail__c.Quantity__c</summarizedField>
        <summaryForeignKey>Order_Detail__c.Customer_s_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Customer&apos;s Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Queue_Delivery_Customer_s_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue Delivery</label>
        <queue>Queue_Delivery</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Queue_Pickup_Customer_s_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue Pickup</label>
        <queue>Queue_Pickup</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Customer&apos;s Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer&apos;s Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>